# libredwg-java-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pom.xml
.github/workflows/: build.yml
libs/: libredwg.la
native/: dwg.c  dwg.h
native/entity/: arc.c  arc.h  block.c  block.h  circle.c  circle.h  ellipse.c  ellipse.h  endblk.c  endblk.h  helper.c  helper.h  image.c  image.h  insert.c  insert.h  line.c  line.h  lwpolyline.c  lwpolyline.h  mlinevertex.c  mlinevertex.h  mtext.c  mtext.h  point.c  point.h  polyline2d.c  polyline2d.h  polyline3d.c  polyline3d.h  ray.c  ray.h  shape.c  shape.h  solid.c  solid.h  spline.c  spline.h  text.c  text.h  (+4 more)
native/util/: helper.c  helper.h
src/main/c/: io_github_maslke_dwg_Dwg.h  io_github_maslke_ldwg_Dwg.c
src/main/java/io/github/maslke/dwg/: Dwg.java  DwgBlockHeader.java
src/main/java/io/github/maslke/dwg/common/: Point2d.java  Point3d.java  Vector2d.java  Vector3d.java
src/main/java/io/github/maslke/dwg/entity/: AbstractBaseEntity.java  Arc.java  BaseEntity.java  Block.java  Circle.java  Common.java  Ellipse.java  EndBlk.java  Face3d.java  Hatch.java  Image.java  Insert.java  Line.java  Lwpolyline.java  MInsert.java  MLine.java  MText.java  OleFrame.java  Parent.java  ParentEntity.java  Point.java  Polyline2d.java  Polyline3d.java  PolylineMesh.java  PolylinePface.java  Ray.java  Shape.java  Solid.java  Spline.java  Text.java  Tolerance.java  Vertex2d.java  Vertex3d.java  XLine.java
src/main/java/io/github/maslke/dwg/support/: Attachment.java  DwgObjectSuperType.java  (+5 more)
src/test/java/io/github/maslke/dwg/: Test.java
(+30 files in other folders)
